-
Bug
-
Resolution: Done
-
Minor
-
None
-
None
-
3
-
4422
The wording on the error message you get from setstripe -s 4G is inaccurate.
[root@centos62_vanilla ~]# lfs setstripe -s 4G /mnt/lustre warning: stripe size larger than 4G is not currently supported and would wrap: Invalid argument (22) error: setstripe: create stripe file '/mnt/lustre' failed [root@centos62_vanilla ~]# lfs setstripe -s 4095M /mnt/lustre
More suitable wording would be stripe size of 4G or larger is not currently supported and would wrap.
- I might also question the value of the 'and would wrap'.