LU-1667 ui: fix inaccurate warning message.

Trivial fix to make stripe size message accurate. Message is
generated if a user issues a 'lfs setstripe' command with a
size 4G or larger. The corrected message now reads:
"stripe size 4G or larger is not currently supported"

Signed-off-by: Richard Henwood <rhenwood@whamcloud.com>
Change-Id: I6978e84aee547f40dc20f9b0bfa243d4960e084d
Reviewed-on: http://review.whamcloud.com/3464
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Cliff White <cliffw@whamcloud.com>
Reviewed-by: Fan Yong <yong.fan@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>